<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
       <item
     android:id="@+id/profile"
     android:icon="@drawable/ic_account_foreground"
     android:title="@string/farmer_profile"/>

    <item
        android:id="@+id/loans"
        android:icon="@drawable/ic_account_foreground"
        android:title="@string/greenfedha_loans"/>

    <item
        android:id="@+id/tenders"
        android:icon="@drawable/ic_insure_foreground"
        android:title="@string/tenders"/>

    <item
        android:title="@string/news_and_events"
        android:id="@+id/news"
        android:icon="@drawable/ic_settings_foreground"/>

    <item
        android:id="@+id/signout"
        android:icon="@drawable/ic_logout_foreground"
        android:title="@string/sign_out_nav"/>


</menu>