<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/daa">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/download"
        app:civ_border_color="@color/teal_700"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-condensed"
        android:paddingStart="20dp"
        android:paddingTop="14dp"
        android:paddingEnd="20dp"
        android:paddingBottom="14dp"
        android:text="@string/surname"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <TextView
        android:id="@+id/id_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:paddingStart="20dp"
        android:paddingTop="14dp"
        android:paddingEnd="20dp"
        android:paddingBottom="14dp"
        android:fontFamily="sans-serif-condensed"
        android:textSize="28sp"
        android:text="@string/id_number"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/first_name"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <TextView
        android:id="@+id/farm_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:paddingStart="20dp"
        android:paddingTop="14dp"
        android:paddingEnd="20dp"
        android:paddingBottom="14dp"
        android:fontFamily="sans-serif-condensed"
        android:textSize="28sp"
        android:text="@string/farmer_number"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/id_number"
        app:layout_constraintTop_toBottomOf="@+id/id_number" />

    <TextView
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="sans-serif-condensed"
        android:paddingStart="20dp"
        android:paddingTop="14dp"
        android:paddingEnd="20dp"
        android:paddingBottom="14dp"
        android:text="@string/tea_center_name"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/farm_number"
        app:layout_constraintTop_toBottomOf="@+id/farm_number" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:fontFamily="sans-serif-condensed"
        android:paddingStart="20dp"
        android:paddingTop="14dp"
        android:paddingEnd="20dp"
        android:paddingBottom="14dp"
        android:text="@string/telephone_number"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/farm_number"
        app:layout_constraintTop_toBottomOf="@+id/center" />

    <TextView
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:paddingStart="20dp"
        android:paddingTop="14dp"
        android:paddingEnd="20dp"
        android:fontFamily="sans-serif-condensed"
        android:textSize="28sp"
        android:paddingBottom="14dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/phone"
        app:layout_constraintTop_toBottomOf="@+id/phone" />


</androidx.constraintlayout.widget.ConstraintLayout>