<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/download"

    android:backgroundTint="@color/teal_700"
    android:visibility="visible"
    tools:context=".Introduction"
    tools:visibility="visible">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="46dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/greenfedha_loans"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_insure"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#00B8D4">

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/greenfedha"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/first_Name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:background="@drawable/input_bg"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingTop="14dp"
                android:paddingRight="20dp"
                android:paddingBottom="14dp"
                android:textColor="@color/black"
                android:textColorHint="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register" />

            <EditText
                android:id="@+id/sur_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:background="@drawable/input_bg"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingTop="14dp"
                android:paddingRight="20dp"
                android:paddingBottom="14dp"
                android:textColor="@color/black"
                android:textColorHint="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_Name" />


            <EditText
                android:id="@+id/lastName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:background="@drawable/input_bg"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingTop="14dp"
                android:paddingRight="20dp"
                android:paddingBottom="14dp"
                android:textColor="@color/black"
                android:textColorHint="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sur_name" />

            <EditText
                android:id="@+id/inputFarmerNo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:background="@drawable/input_bg"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/farmer_number"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingTop="14dp"
                android:paddingRight="20dp"
                android:paddingBottom="14dp"
                android:textColor="@color/black"
                android:textColorHint="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastName" />

            <EditText
                android:id="@+id/telephone_no"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:background="@drawable/input_bg"
                android:drawableStart="@drawable/ic_baseline_phone_24"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/telephone_number"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingTop="14dp"
                android:paddingRight="20dp"
                android:paddingBottom="14dp"
                android:textColor="@color/black"
                android:textColorHint="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/inputFarmerNo" />

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:background="@drawable/input_bg"
                android:drawableStart="@drawable/ic_baseline_phone_24"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingTop="14dp"
                android:paddingRight="20dp"
                android:paddingBottom="14dp"
                android:textColor="@color/black"
                android:textColorHint="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/telephone_no" />

            <EditText
                android:id="@+id/idno"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:background="@drawable/input_bg"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/id_number"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingTop="14dp"
                android:paddingRight="20dp"
                android:paddingBottom="14dp"
                android:textColor="@color/black"
                android:textColorHint="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/email" />


            <Spinner
                android:id="@+id/insure_spin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:popupBackground="@color/teal_700"
                android:background="@drawable/input_bg"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/choose_insurance"
                android:inputType="none"
                android:minHeight="48dp"
                android:paddingLeft="20dp"
                android:paddingTop="14dp"
                android:paddingRight="20dp"
                android:paddingBottom="14dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idno"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:background="@drawable/input_bg"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/amount"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingTop="14dp"
                android:paddingRight="20dp"
                android:paddingBottom="14dp"
                android:textColor="@color/black"
                android:textColorHint="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/insure_spin" />


            <Button
                android:id="@+id/btnsubmit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/input_bg"
                android:text="@string/submit"
                android:backgroundTint="@color/teal_200"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="@+id/amount"
                app:layout_constraintStart_toStartOf="@+id/amount"
                app:layout_constraintTop_toBottomOf="@+id/amount" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>